    - avoid clobbering SGF property ‘EV’ on resignation
    - follow main line in subtrees on read
  - PASS for SZ <= 19 normalized to "" on read, written as ""
  - ‘=’ also displays move number of the stone (if any) at that position
  - new keybinding for ‘gnugo-undo-one-move’: M-u
  - ‘gnugo-undo-one-move’ can optionally arrange for you to play next
  - new command: ‘o’ (gnugo-oops)
  - new command: ‘L’ (gnugo-frolic-in-the-leaves)
  - new major mode: GNUGO Frolic (gnugo-frolic-mode)
  - ‘gnugo-move-history’ returns last two moves w/ RSEL ‘two’
  - performance improvements
  - of interest to hackers (see source, BI => backward incompatible)
    - ‘gnugo/sgf-read-file’ renamed to ‘gnugo/sgf-create’ and enhanced
    - ‘:sgf-gametree’ internal representation inverted (BI)
    - ‘gnugo-magic-undo’ handles SPEC ‘0’

- 2.3.1 | 2014-02-27
  - portability fixes

- 2.3.0 | 2014-02-24
  - now part of ELPA, tweaked for GNU Emacs 24.x
    - dropped support for XEmacs and older Emacs
    - use ‘user-error’ for user errors
  - bugfixes
    - handle sudden jump in captured stones correctly
    - rename hook-communication var w/ "gnugo-" prefix
    - (w/ images) grid top/bottom row spacing
  - on SGF save/load indicate buffer not modified
  - documentation improvements
    - version numbering scheme documented: MAJOR.MINOR.PATCH
    - keybinding constructs for ‘gnugo’ and ‘gnugo-board-mode’
  - message for worm/dragon animation avoids underscore
  - new commands
    - ‘A’ (gnugo-switch-to-another)
    - ‘_’ and ‘M-_’ (gnugo-boss-is-near) -- was ‘bury-buffer’
  - new keybinding for ‘gnugo-undo-two-moves’: DEL

- 2.2.14 | 2008-03-03
  - start error message w/ a capital letter
  - use ‘(error "%s" X)’ instead of ‘(error X)’
  - improve ‘gnugo-animation-string’ docstring

- 2.2.13 | 2006-04-10
  - grid (letters and numbers) visibility can be toggled
  - display bug workaround
  - performance improvements

- 2.2.12 | 2006-04-06
  - bugfix: handle "" as "PASS"

- 2.2.11 | 2005-04-06